--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#shopping-bag"></use>
             </svg>
             <span>
-              Шаговая доступность до остановки общественного транспорта
+              Развитая инфраструктура: множество магазинов, школ, детских садов, учреждений минздава
             </span>
           </div>
         </div>
@@ -148,7 +148,7 @@
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#beach"></use>
             </svg>
             <span>
-              Шаговая доступность до остановки общественного транспорта
+              5 минут до городского пляжа
             </span>
           </div>
         </div>
