--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
         <div class="col-12">
           <ul class="page-main-advantages">
             <li>Современный дизайн</li>
-            <li>Цены от 1500 BYN за м²</li>
+            <li>Цены от 1650 BYN за м²</li>
             <li>Рассрочка</li>
             <li>
               <a href="#location" data-scroll-link="location">
@@ -193,7 +193,7 @@
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#cube"></use>
                 </svg>
                 <h3 class="item-with-icon-title">Квадратный метр</h3>
-                <span class="item-with-icon-subtitle">от 1500 BYN</span>
+                <span class="item-with-icon-subtitle">от 1650 BYN</span>
               </div>
             </div>
 
@@ -204,20 +204,8 @@
                   </use>
                 </svg>
                 <h3 class="item-with-icon-title">Метраж квартир</h3>
-                <span class="item-with-icon-subtitle">25,55 - 80,94 м.кв.</span>
+                <span class="item-with-icon-subtitle">25 - 82 м.кв.</span>
               </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-12">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Praesent semper feugiat nibh sed pulvinar proin. Ac tortor
-                vitae purus faucibus ornare suspendisse sed nisi lacus. Quam
-                quisque id diam vel quam elementum pulvinar etiam non.
-              </p>
             </div>
           </div>
         </div>
@@ -301,16 +289,16 @@
             <h3 class="plan-card-title">
               Квартира 25 м.кв.
             </h3>
-            <span class="plan-card-subtitle">
+            <!-- <span class="plan-card-subtitle">
               Квартира 25 м.кв.
-            </span>
+            </span> -->
             <div class="plan-card-image" style="background-image: url('./img/layout-25.png');" data-toggle="modal"
               data-target="#layout1">
               <svg class="plan-card-zoom-icon" width="50" height="50">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 50 300 $</span>
+            <span class="plan-card-price">Цена: 41 250 $</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -321,16 +309,16 @@
             <h3 class="plan-card-title">
               Квартира 45 м.кв.
             </h3>
-            <span class="plan-card-subtitle">
+            <!-- <span class="plan-card-subtitle">
               Квартира 45 м.кв.
-            </span>
+            </span> -->
             <div class="plan-card-image" style="background-image: url('./img/layout-45.png');" data-toggle="modal"
               data-target="#layout2">
               <svg class="plan-card-zoom-icon" width="50" height="50">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 50 300 $</span>
+            <span class="plan-card-price">Цена: 74 250 $</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -341,16 +329,16 @@
             <h3 class="plan-card-title">
               Квартира 65 м.кв.
             </h3>
-            <span class="plan-card-subtitle">
+            <!-- <span class="plan-card-subtitle">
               Квартира 65 м.кв.
-            </span>
+            </span> -->
             <div class="plan-card-image" style="background-image: url('./img/layout-65.png');" data-toggle="modal"
               data-target="#layout3">
               <svg class="plan-card-zoom-icon" width="50" height="50">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 50 300 $</span>
+            <span class="plan-card-price">Цена: 103 950 $</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -359,18 +347,18 @@
         <div class="col-sm-6 col-md-3 mb-4 mb-sm-0">
           <div class="plan-card">
             <h3 class="plan-card-title">
-              Квартира 89 м.кв.
+              Квартира 81 м.кв.
             </h3>
-            <span class="plan-card-subtitle">
+            <!-- <span class="plan-card-subtitle">
               Квартира 89 м.кв.
-            </span>
+            </span> -->
             <div class="plan-card-image" style="background-image: url('./img/layout-89.png');" data-toggle="modal"
               data-target="#layout4">
               <svg class="plan-card-zoom-icon" width="50" height="50">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 50 300 $</span>
+            <span class="plan-card-price">Цена: 133 650 $</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
