--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
   <link rel="preload" href="fonts/Gilroy-Regular.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="fonts/Gilroy-Bold.woff2" as="font" type="font/woff2" crossorigin />
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
 </head>
 
@@ -87,7 +94,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>Старт продаж в апреле 2020 года</h1>
+          <h1>Старт продаж в апреле 2020 года. Цена от 1650 BYN за м² !</h1>
           <a href="#contacts" class="button" data-scroll-link="contacts">
             Задать вопрос
           </a>
@@ -298,7 +305,7 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 41 250 $</span>
+            <span class="plan-card-price">Цена: 41 250 руб.</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -318,7 +325,7 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 74 250 $</span>
+            <span class="plan-card-price">Цена: 74 250 руб.</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -338,7 +345,7 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 103 950 $</span>
+            <span class="plan-card-price">Цена: 103 950 руб.</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -358,7 +365,7 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-            <span class="plan-card-price">Цена: 133 650 $</span>
+            <span class="plan-card-price">Цена: 133 650 руб.</span>
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
