--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
       <div class="row">
         <div class="col-12">
           <ul class="contacts-list">
-            <li>
+            <!-- <li>
               <a href="mailto:proinvestor@bk.ru">
                 proinvestor@bk.ru
               </a>
-            </li>
+            </li> -->
             <li>
               <a href="tel:+37529616-04-04">
                 +375 (29) 616-04-04
@@ -94,7 +94,11 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>Старт продаж в апреле 2020 года. Цена от 1650 BYN за м² !</h1>
+          <h1>Старт продаж в апреле 2020 года.
+            <span>
+              Цена от 1650 BYN за м² !
+            </span>
+          </h1>
           <a href="#contacts" class="button" data-scroll-link="contacts">
             Задать вопрос
           </a>
@@ -105,7 +109,7 @@
         <div class="col-12">
           <ul class="page-main-advantages">
             <li>Современный дизайн</li>
-            <li>Цены от 1650 BYN за м²</li>
+            <!-- <li>Цены от 1650 BYN за м²</li> -->
             <li>Рассрочка</li>
             <li>
               <a href="#location" data-scroll-link="location">
@@ -305,11 +309,8 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-<<<<<<< HEAD
             <span class="plan-card-price">Цена: 41 250 руб.</span>
-=======
-            <span class="plan-card-price">Цена: 41 250 $</span>
->>>>>>> 904158a4d2d6e6e9b4672e255cbff99321890b60
+
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -329,11 +330,8 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-<<<<<<< HEAD
             <span class="plan-card-price">Цена: 74 250 руб.</span>
-=======
-            <span class="plan-card-price">Цена: 74 250 $</span>
->>>>>>> 904158a4d2d6e6e9b4672e255cbff99321890b60
+
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -353,11 +351,8 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-<<<<<<< HEAD
             <span class="plan-card-price">Цена: 103 950 руб.</span>
-=======
-            <span class="plan-card-price">Цена: 103 950 $</span>
->>>>>>> 904158a4d2d6e6e9b4672e255cbff99321890b60
+
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -377,11 +372,8 @@
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#zoom-in"></use>
               </svg>
             </div>
-<<<<<<< HEAD
             <span class="plan-card-price">Цена: 133 650 руб.</span>
-=======
-            <span class="plan-card-price">Цена: 133 650 $</span>
->>>>>>> 904158a4d2d6e6e9b4672e255cbff99321890b60
+
             <span class="plan-card-price-message">Возможно в рассрочку</span>
             <button class="button button-dark" data-toggle="modal" data-target="#condition">Узнать условия</button>
           </div>
@@ -540,11 +532,11 @@
                 +375 (25) 616-04-04
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a href="mailto:proinvestor@bk.ru">
                 proinvestor@bk.ru
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
 
